Add machine output functionality.

--- a/source/R5T.D0099.D001.Base/R5T.D0099.D001.Base.csproj
+++ b/source/R5T.D0099.D001.Base/R5T.D0099.D001.Base.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.Magyar\source\R5T.Magyar\R5T.Magyar.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0064\source\R5T.T0064\R5T.T0064.csproj" />
-    <ProjectReference Include="..\..\..\R5T.T0091\source\R5T.T0091\R5T.T0091.csproj" />
   </ItemGroup>
 
 </Project>
