--- a/source/R5T.D0099.D001.I002/R5T.D0099.D001.I002.csproj
+++ b/source/R5T.D0099.D001.I002/R5T.D0099.D001.I002.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\R5T.Magyar\source\R5T.Magyar\R5T.Magyar.csproj" />
+    <ProjectReference Include="..\..\..\R5T.D0081\source\R5T.D0081.Base\R5T.D0081.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X001\R5T.T0062.X001.csproj" />
-    <ProjectReference Include="..\R5T.D0099.Base\R5T.D0099.Base.csproj" />
-    <ProjectReference Include="..\R5T.D0099.D002.Base\R5T.D0099.D002.Base.csproj" />
+    <ProjectReference Include="..\R5T.D0099.D001.Base\R5T.D0099.D001.Base.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
