--- a/source/R5T.D0099.A001/R5T.D0099.A001.csproj
+++ b/source/R5T.D0099.A001/R5T.D0099.A001.csproj
@@ -1,14 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.D0098\source\R5T.D0098.I001\R5T.D0098.I001.csproj" />
     <ProjectReference Include="..\R5T.D0099.D001.I002\R5T.D0099.D001.I002.csproj" />
     <ProjectReference Include="..\R5T.D0099.D002.I002\R5T.D0099.D002.I002.csproj" />
     <ProjectReference Include="..\R5T.D0099.I001\R5T.D0099.I001.csproj" />
   </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
 </Project>
