--- a/source/R5T.D0099.D002.Base/R5T.D0099.D002.Base.csproj
+++ b/source/R5T.D0099.D002.Base/R5T.D0099.D002.Base.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X001\R5T.T0062.X001.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0064\source\R5T.T0064\R5T.T0064.csproj" />
     <ProjectReference Include="..\R5T.D0099.T001\R5T.D0099.T001.csproj" />
   </ItemGroup>
-
 </Project>
