--- a/source/R5T.D0099.D002.I002/R5T.D0099.D002.I002.csproj
+++ b/source/R5T.D0099.D002.I002/R5T.D0099.D002.I002.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.D0096\source\R5T.D0096.Base\R5T.D0096.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.D0098\source\R5T.D0098.Base\R5T.D0098.Base.csproj" />
@@ -9,9 +8,9 @@
     <ProjectReference Include="..\R5T.D0099.D002.Base\R5T.D0099.D002.Base.csproj" />
     <ProjectReference Include="..\R5T.D0099.D003.Base\R5T.D0099.D003.Base.csproj" />
   </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
 </Project>
