--- a/source/R5T.D0099.D003.I002/R5T.D0099.D003.I002.csproj
+++ b/source/R5T.D0099.D003.I002/R5T.D0099.D003.I002.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.D0048\source\R5T.D0048.Base\R5T.D0048.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X001\R5T.T0062.X001.csproj" />
